test/Concurrency/reasync_protocol.code
// RUN: %target-typecheck-verify-language -enable-experimental-concurrency -target %target-language-5.1-abi-triple
// REQUIRES: concurrency

@reasync protocol ReasyncProtocol {}

@reasync struct ReasyncStruct {}
// expected-error@-1 {{@reasync may only be used on 'protocol' declarations}}
